fixed spacing

--- a/src/Components/searchbar/searchbar.scss
+++ b/src/Components/searchbar/searchbar.scss
@@ -9,6 +9,7 @@
 		border-color: rgba(223, 225, 229, 0);
 	}
 	margin: 0 auto;
+	margin-top: 1em;
 }
 .textbox {
 	color: rgb(44, 44, 44);
